# Meta-editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
3dparty/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  Img.cpp  Table.cpp  Table.h  callback.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
